[project]
name = "confounded-pomdp-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "gymnasium>=1.1.1",
    "numpy>=1.26.4",
    "scikit-learn>=1.6.1",
    "tensorflow==2.16.1",
    "tensorflow-probability==0.24.0",
    "tf-keras==2.16.*",
    "tf-slim>=1.1.0",
]
